fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', Arial, sans-serif;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 button {
